<resources>
    <string name="app_name">Family Map</string>
    <string name="Server_host">Server Host: </string>
    <string name="server_port">Server Port: </string>
    <string name="user_name">User Name: </string>
    <string name="password">Password: </string>
    <string name="first_name">First Name: </string>
    <string name="last_name">Last Name: </string>
    <string name="email">Email: </string>

    <string name="gender">Gender: </string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="signInButton">SIGN IN</string>
    <string name="registerButton">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting_icon">setting_icon</string>
    <string name="google_maps_key">Google maps</string>
    <string name="setting_button">Settings_button</string>
    <string name="search_button">Search</string>
    <string name="search_icon">Search_icon</string>
    <string name="to_do">Todo</string>
    <string name="click_on_a_marker_to_see_event_details">Click on a marker to see event details</string>

</resources>