<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fragments.LoginFragment"
    android:id="@+id/login_register" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:stretchColumns="3">

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/Server_host"/>
                <EditText
                    android:id="@+id/serverHostField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="text"
                    android:hint="10.0.2.2"
                    tools:text="10.0.2.2" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/server_port"/>
                <EditText
                    android:id="@+id/serverPortField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="text"
                    android:hint="8080"
                    tools:text="8080" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/user_name"/>
                <EditText
                    android:id="@+id/userNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="text"
                    tools:text="cookie825" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/password"/>
                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="text"
                    tools:text="byu1994" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/first_name"/>
                <EditText
                    android:id="@+id/firstNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="textPersonName"
                    tools:text="Youngchan" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/last_name"/>

                <EditText
                    android:id="@+id/lastNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="textPersonName"
                    tools:text="Kim" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/email" />
                <EditText
                    android:id="@+id/emailField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="textEmailAddress"
                    tools:text="kimsyc94@byu.edu" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:gravity="end"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/radioButtons"
                    android:orientation="horizontal"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/maleRadioButton"
                        android:layout_width="78dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/femaleRadioButton"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </TableRow>

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:gravity="center">

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signInButton" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerButton" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>


</LinearLayout>